Add jwt auth and login endpoint
